unpackaged/main/default/objects/SDO_Service_CaseArticle__c/SDO_Service_CaseArticle__c.object-meta.xml
<CustomObject>
    <description>What: Used in the Analytics Demo Data tool for Service Data.
What: Analytics &amp; Service Teams</description>
    <label>CaseArticle__c</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>CaseArticle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CaseArticle__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>