unpackaged/main/default/objects/SDO_Service_CaseArticle__c/fields/ArticleVersionNumber__c.field-meta.xml
<CustomField>
    <fullName>ArticleVersionNumber__c</fullName>
    <label>ArticleVersionNumber</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>