unpackaged/main/default/objects/SDO_Service_CaseArticle__c/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <label>Case ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>