unpackaged/main/default/objects/SDO_Service_CaseArticle__c/fields/IsSharedByEmail__c.field-meta.xml
<CustomField>
    <fullName>IsSharedByEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSharedByEmail</label>
    <type>Checkbox</type>
</CustomField>